alignment fixes

--- a/mss/mss.css
+++ b/mss/mss.css
@@ -12,6 +12,8 @@
 	height: 40px;
 	display: block;
 	position: absolute;
+	left: 9px;
+	top: 4px;
 	border: none;
 	border-radius: 20px;
 	background-color: #F0F0F0;
@@ -114,6 +116,8 @@
 
 .mss-channel-name {
 	position: absolute;
+	left: 4px;
+	top: 4px;
 	width: 24px;
 	height: 24px;
 	border-radius: 24px;
